# pp1

./: db.sqlite3  items_views.py  main.py  pyproject.toml  requirements.txt
api_v1/: __init__.py
api_v1/products/: crud.py  dependencies.py  views.py
core/: config.py
core/models/: __init__.py  db_helper.py  product.py
users/: schemas.py  views.py
